--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -31,7 +31,7 @@ ol {
 
 /* Set core body defaults */
 body {
-  min-height: 100vh;
+  min-height: 100dvh;
   line-height: 1.5;
 }
 
